tests/errors/case_type_pattern_not_union.dang
type Cat {
  pub name: String!
}

pub x = Cat(name: "Whiskers")

pub result = case (x) {
  c: Cat => c.name
}
